--- a/app/index.html
+++ b/app/index.html
@@ -19,10 +19,11 @@
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 
-<body layout="column">
+<body>
   <toolbar></toolbar>
-  <div ng-view flex layout="column"></div>
+  <div ng-view></div>
 
+  <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-cookies/angular-cookies.js"></script>
