migration to TS

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,10 @@
   <script src="bower_components/angular-animate/angular-animate.js"></script>
   <script src="bower_components/angular-aria/angular-aria.js"></script>
   <script src="bower_components/angular-messages/angular-messages.js"></script>
-  <script src="app.module.js"></script>
+  <script src="bower_components/system.js/dist/system.js"></script>
+  <script src="bower_components/system.js/dist/system-polyfills.js"></script>
+  <script src="scripts/system.startup.js"></script>
+  <!--<script src="app.module.js"></script>
   <script src="app.config.js"></script>
   <script src="app.constants.js"></script>
   <script src="common/ellipsis.filter.js"></script>
@@ -44,7 +47,7 @@
   <script src="discover/discover.component.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
-  <script src="components/version/interpolate-filter.js"></script>
+  <script src="components/version/interpolate-filter.js"></script>-->
 </body>
 
 </html>
