--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,7 @@
   <script src="services/services.module.js"></script>
   <script src="services/discover.service.js"></script>
   <script src="services/search-hub.service.js"></script>
+  <script src="services/search.service.js"></script>
   <script src="discover/discover.module.js"></script>
   <script src="discover/discover.component.js"></script>
   <script src="components/version/version.js"></script>
